tests/backend/zero_alloc_checker/test_all_opt.output
File "test_all_opt.ml", line 7, characters 5-15:
Error: Annotation check for zero_alloc failed on function Test_all_opt.bar (camlTest_all_opt.bar_HIDE_STAMP)

File "test_all_opt.ml", line 7, characters 25-30:
Error: allocation of 24 bytes

File "test_all_opt.ml", line 7, characters 28-30:
Error: allocation of 24 bytes

File "test_all_opt.ml", line 9, characters 8-21:
Error: Annotation check for zero_alloc failed on function Test_all_opt.baz (camlTest_all_opt.baz_HIDE_STAMP)

File "test_all_opt.ml", line 9, characters 12-21:
Error: allocation of 24 bytes
